--- a/.gitignore
+++ b/.gitignore
@@ -155,5 +155,6 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+*.env
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,java,maven
