feat: setup integration with datasource, and create FraudCheckHistory model

--- a/fraud/src/main/resources/application.yml
+++ b/fraud/src/main/resources/application.yml
@@ -3,3 +3,16 @@ server:
 spring:
   application:
     name: fraud
+  datasource:
+    url: jdbc:postgresql://localhost:5433/marco_frauds
+    username: alaa
+    password: alaa1234
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+    show-sql: true
+    hibernate:
+      ddl-auto: update
