--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,15 +21,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 17
+
+    # Set up JDK 23 (Oracle OpenJDK 23)
+    - name: Set up JDK 23
       uses: actions/setup-java@v4
       with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
+        java-version: '23'               # Use JDK 23
+        distribution: 'oracle'           # Specify Oracle as the distribution
+        cache: maven                     # Cache dependencies to speed up builds
+    
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
+    # Optional: Uploads the full dependency graph to GitHub to improve Dependabot alerts
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
