--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,7 +31,7 @@ jobs:
         cache: maven                     # Cache dependencies to speed up builds
     
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B clean package --file pom.xml -X
 
     # Optional: Uploads the full dependency graph to GitHub to improve Dependabot alerts
     - name: Update dependency graph
