--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,25 +14,27 @@ on:
   pull_request:
     branches: [ "main" ]
 
+# Add these permission settings
+permissions:
+  contents: read
+  actions: read
+  security-events: write
+
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
-
-    # Set up JDK 23 (Oracle OpenJDK 23)
-    - name: Set up JDK 23
+    
+    - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '23'               # Use JDK 23
-        distribution: 'oracle'           # Specify Oracle as the distribution
-        cache: maven                     # Cache dependencies to speed up builds
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
     
     - name: Build with Maven
-      run: mvn -B clean package --file pom.xml -X
-
-    # Optional: Uploads the full dependency graph to GitHub to improve Dependabot alerts
+      run: mvn -B clean package --file pom.xml
+    
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
