--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,12 +14,6 @@ on:
   pull_request:
     branches: [ "main" ]
 
-# Add these permission settings
-permissions:
-  contents: read
-  actions: read
-  security-events: write
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -36,5 +30,11 @@ jobs:
     - name: Build with Maven
       run: mvn -B clean package --file pom.xml
     
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    - name: Run tests
+      run: mvn test
+    
+    - name: Upload artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: Package
+        path: target/*.jar
